--- a/src/Components/LoginPage/RegisterPassCode.css
+++ b/src/Components/LoginPage/RegisterPassCode.css
@@ -1,6 +1,6 @@
 .PassCode_BG{
     position: fixed;
-    background-image: url("../../public/logIn.png");
+    background-image: url("../../public/logIn.svg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;     
